# book2audio

./: .dockerignore  .gitignore  plan.md  pyproject.toml
.github/workflows/: keepalive.yml
book2audio/: Dockerfile  __init__.py  audio_processor.py  chapter_splitter.py  cli.py  fly.toml  pyproject.toml  render.yaml  requirements.txt  segment_splitter.py  tailwind.config.js
book2audio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
book2audio/.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
book2audio/book2audio/: __init__.py  __main__.py  chapter_splitter.py  cli.py  ocr.py  pdf_to_images.py  text_processor.py  tts.py  tts_backend.py
book2audio/book2audio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
book2audio/book2audio/web/: app.py  database.py  pipeline.py
book2audio/book2audio/web/static/: app.css  index.html  sw.js
book2audio/scripts/: export_quizlet.py  import_topics.py
book2audio/tests/: test_chapter_splitter.py  test_pdf_to_images.py  test_text_processor.py  test_tts.py  test_tts_backend.py
book2audio/web/: app.py  database.py  pipeline.py  storage.py
book2audio/web/static/: diagrams.js  index.html  manifest.json  sw.js
scripts/: migrate_to_cloud.py  seed_quizzes.py
tests/: test_audio_processor.py  test_database.py  test_storage.py  test_tts.py
